# libvmtrace

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac  drakvuf_patch  fast_switch.diff  test-passed.txt
apps/: CMakeLists.txt  Makefile.am  code_section_integrity.cpp  code_section_integrity_binary.cpp  csec.cpp  dingfest.cpp  git_detect.cpp  measurment.cpp  measurment_pf.cpp  saracenia.cpp  saracenia2.cpp  ssh_key_extraction.cpp  sshbasic.cpp
apps/plugins/: Plugins.hpp  ProcessChangeLogger.cpp  ProcessChangeLogger.hpp  ProcessListLogger.cpp  ProcessListLogger.hpp  SyscallLogger.cpp  SyscallLogger.hpp
apps/ssh_helper/: SSHHelper.cpp  SSHHelper.hpp
src/: CMakeLists.txt  LinuxFileExtractionAgent  Makefile.am  libvmtrace.hpp
src/agent/: LinuxAgentUtil.hpp  LinuxFileExtractionAgent.cpp
src/net/: IPv4Addr.cpp  IPv4Addr.hpp  NetDev.cpp  NetDev.hpp  NetFilter.hpp  NetMonitor.cpp  NetMonitor.hpp  NetProxy.cpp  NetProxy.hpp  NetworkConnection.cpp  NetworkConnection.hpp  Packet.cpp  Packet.hpp  PacketFilter.hpp
src/sys/: Altp2m.cpp  Altp2m.hpp  Altp2mBasic.cpp  Altp2mBasic.hpp  BreakpointMechanism.cpp  BreakpointMechanism.hpp  CodeInjection.hpp  DwarfHelper.cpp  DwarfHelper.hpp  ElfHelper.cpp  ElfHelper.hpp  Event.cpp  Event.hpp  ExtendedInjectionStrategy.cpp  FileExtraction.hpp  Int3.cpp  Int3.hpp  LinuxELFInjector.cpp  LinuxELFInjector.hpp  LinuxFileExtractor.cpp  LinuxFileExtractor.hpp  LinuxVM.cpp  LinuxVM.cpp.rej  LinuxVM.hpp  OperatingSystem.cpp  OperatingSystem.hpp  PrimitiveInjectionStrategy.cpp  Process.cpp  Process.hpp  RegisterMechanism.cpp  RegisterMechanism.hpp  SyscallBasic.cpp  SyscallBasic.hpp  SyscallJson.cpp  SyscallJson.hpp  SystemMonitor.cpp  SystemMonitor.hpp  Xen.cpp  Xen.hpp
src/util/: Controller.cpp  Controller.hpp  Crc32.hpp  ElasticLogger.cpp  ElasticLogger.hpp  KafkaCommander.cpp  KafkaCommander.hpp  KafkaLogger.cpp  KafkaLogger.hpp  LockGuard.hpp  Logging.cpp  Logging.hpp  PeriodicTimer.hpp  Plugin.hpp  ProcessCache.cpp  ProcessCache.hpp  Setting.hpp  utils.cpp  utils.hpp  wqueue.h  wqueue.hpp
tests/: CMakeLists.txt  Makefile.am  memory_test.cpp  memory_test_process.cpp  static_elasticsearch_test.cpp  static_test.cpp  static_test_agent_presence.cpp  static_test_altp2m.cpp  static_test_elasticsearch.cpp  static_test_elf_injection.cpp  static_test_extended_breakpoint.cpp  static_test_extended_injection.cpp  static_test_file.cpp  static_test_file_extraction.cpp  static_test_injection.cpp  static_test_kafka_commander.cpp  static_test_primitive_breakpoint.cpp  static_test_primitive_injection.cpp  static_test_simple_injection.cpp
